Review the way link for online-help are done in Analyzers. Include documentation for the new analyzer: Model Balloon. Minor code-alignments fixes.
git-svn-id: https://repo.thevirtualbrain.org/svn/tvb/trunk/framework_tvb@5292 1c0e02f0-7929-43c0-8fb3-3293bf43b0d1

--- a/tvb/interfaces/web/static/style/base.css
+++ b/tvb/interfaces/web/static/style/base.css
@@ -408,7 +408,7 @@ float: left;
 font-size: 21px;
 font-weight: bold;
 margin: 0 20px 25px 0;
-min-height: 64px;
+min-height: 56px;
 padding: 0 0 10px 0;
 text-shadow: rgba(0, 0, 0, 0.3) 1px 1px 0px;
 width: 478px;
@@ -425,7 +425,7 @@ color: #c8d4de;
 header nav li a {
 display: block;
 height: 100%;
-min-height: 64px;
+min-height: 56px;
 padding: 0 0 0 135px;
 width: 100%;
 -webkit-box-sizing: border-box;
@@ -537,6 +537,9 @@ background-image: url("./img/nav/img_ss_generic5.png");
 }
 header nav li#nav-analyze-ica {
 background-image: url("./img/nav/img_ss_generic8.png");
+}
+header nav li#nav-analyze-balloon {
+background-image: url("./img/nav/img_ss_generic6.png");
 }
 header nav li#nav-analyze-bct {
 background-image: url("./img/nav/img_ss_generic9.png");
